--- a/tcl_dp_transformer.yaml
+++ b/tcl_dp_transformer.yaml
@@ -153,7 +153,9 @@ task:
     pad_after: ${eval:'${n_action_steps}-1'}
     seed: 42
     val_ratio: 0.02
-    data_root: "/home/geyuan/local_soft/TCL/collected_data_0507"
+    data_root: "/home/geyuan/local_soft/TCL/collected_data_0507/"
+    h5_path: "/home/geyuan/local_soft/TCL/hdf5/collected_data_0507.h5"
+    use_h5: false
   dataset_target:  # Target domain
     _target_: diffusion_policy.dataset.pusht_image_dataset.PushTImageDataset
     shape_meta: *shape_meta
@@ -206,7 +208,7 @@ training:
   val_every: 50
 val_dataloader:
   batch_size: 64
-  num_workers: 48
+  num_workers: 24  # ori:48
   persistent_workers: false
   pin_memory: true
   shuffle: false
